--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "revista-gatsby-starter",
+  "name": "revista-gatsby-starterone",
   "description": "Open-source Gatsby blog template",
   "version": "1.0.0",
   "license": "MIT",
