--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "reading-time": "^1.5.0",
     "sass": "^1.52.3",
     "slugify": "^1.6.5",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "react-instantsearch-hooks-web": "^6.38.1",
+    "algoliasearch": "^4.14.2"
   },
   "devDependencies": {
     "prettier": "2.8.0"
