--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "slugify": "^1.6.5",
     "styled-components": "^5.3.5",
     "react-instantsearch-hooks-web": "^6.38.1",
+    "gatsby-plugin-algolia": "^1.0.3",
     "algoliasearch": "^4.14.2"
   },
   "devDependencies": {
