--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "slugify": "^1.6.5",
     "styled-components": "^5.3.5",
     "gatsby-remark-embedded-codesandbox": "^1.2.0",
+    "gatsby-remark-responsive-iframe": "^6.12.0",
     "gatsby-plugin-algolia": "^1.0.3",
     "algoliasearch": "^4.14.2"
   },
