--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-sass": "^6.2.0",
     "gatsby-plugin-sharp": "^5.2.0",
+    "gatsby-remark-prismjs": "^7.12.0",
+    "prismjs": "^1.9.0",
     "gatsby-plugin-sitemap": "^6.2.0",
     "gatsby-plugin-styled-components": "^6.2.0",
     "gatsby-read-time-estimate": "^0.0.1",
